y.output
Terminals unused in grammar

    DO
    KW_UNTYPED


State 61 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 66 conflicts: 2 shift/reduce
State 92 conflicts: 16 reduce/reduce
State 156 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 167 conflicts: 2 shift/reduce


Grammar

    0 $accept: PROG $end

    1 PROG: KW_MODULE IDENTIFIER ';' GLOBALS

    2 GLOBALS: %empty
    3        | GLOBAL GLOBALS
    4        | KW_EXTERN GLOBAL GLOBALS

    5 GLOBAL: FUNCTION
    6       | DECLARATIONBLOCK ';'

    7 FUNCTION: FUNCTIONHEADER FUNCTIONREST

    8 FUNCTIONHEADER: MODIFIERS IDENTIFIER ':' PARAMLIST '-' '>' RETURNTYPE

    9 FUNCTIONREST: ';'
   10             | BLOCK

   11 MODIFIERS: %empty
   12          | KW_START

   13 PARAMLIST: KW_VOID
   14          | PARAMBLOCK MOREPARAMBLOCK

   15 PARAMBLOCK: TYPE PARAM MOREPARAM

   16 MOREPARAMBLOCK: %empty
   17               | ';' PARAMBLOCK MOREPARAMBLOCK

   18 MOREPARAM: %empty
   19          | ',' PARAM MOREPARAM

   20 PARAM: REFERENCE IDENTIFIER DIMENSIONBLOCK

   21 RETURNTYPE: TYPE REFERENCE DIMENSIONBLOCK

   22 REFERENCE: %empty
   23          | '*' REFERENCE

   24 DIMENSIONBLOCK: %empty
   25               | '[' ']' DIMENSIONBLOCK

   26 BLOCK: '{' CODE '}'

   27 CODE: %empty
   28     | BLOCK CODE
   29     | STATEMENT CODE

   30 STATEMENT: KW_LABEL IDENTIFIER ';'
   31          | ';'
   32          | KW_BREAK ';'
   33          | KW_CONTINUE ';'
   34          | KW_IF '(' EXPRESSION ')' BLOCK elseBLOCK
   35          | KW_GOTO IDENTIFIER ';'
   36          | KW_WHILE '(' EXPRESSION ')' KW_DO BLOCK
   37          | KW_DO BLOCK KW_WHILE '(' EXPRESSION ')'
   38          | KW_SWITCH '(' EXPRESSION ')' '{' SWITCHCASES KW_DEFAULT BLOCK '}'
   39          | KW_RETURN EXPRESSION ';'
   40          | EXPRESSION ';'
   41          | DECLARATIONBLOCK ';'

   42 elseBLOCK: %empty
   43          | KW_ELSE BLOCK

   44 SWITCHCASES: %empty
   45            | KW_CASE INT BLOCK SWITCHCASES

   46 DECLARATIONBLOCK: TYPE DECLARATION RESTDECLARATION

   47 DECLARATION: REFERENCE IDENTIFIER INDEXBLOCK INITIALIZER

   48 RESTDECLARATION: %empty
   49                | ',' DECLARATION RESTDECLARATION

   50 INDEXBLOCK: %empty
   51           | '[' INT ']' INDEXBLOCK

   52 INITIALIZER: %empty
   53            | '=' EXPRESSION

   54 EXPRESSION: LOGICALOR RESTEXPRESSION

   55 RESTEXPRESSION: %empty
   56               | '=' LOGICALOR RESTEXPRESSION

   57 LOGICALOR: LOGICALAND RESTLOGICALOR

   58 RESTLOGICALOR: %empty
   59              | '|' '|' LOGICALAND RESTLOGICALOR

   60 LOGICALAND: BITWISEOR RESTLOGICALAND

   61 RESTLOGICALAND: %empty
   62               | '&' '&' BITWISEOR RESTLOGICALAND

   63 BITWISEOR: BITWISEXOR RESTBITWISEOR

   64 RESTBITWISEOR: %empty
   65              | '|' BITWISEXOR RESTBITWISEOR

   66 BITWISEXOR: BITWISEAND RESTBITWISEXOR

   67 RESTBITWISEXOR: %empty
   68               | '^' BITWISEAND RESTBITWISEXOR

   69 BITWISEAND: EQUALITY RESTBITWISEAND

   70 RESTBITWISEAND: %empty
   71               | '&' EQUALITY RESTBITWISEAND

   72 EQUALITY: RELATION RESTEQUALITY

   73 RESTEQUALITY: %empty
   74             | EQUALITYOPERATOR RELATION RESTEQUALITY

   75 EQUALITYOPERATOR: '=' '='
   76                 | '!' '='

   77 RELATION: SHIFT RESTRELATION

   78 RESTRELATION: %empty
   79             | RELATIONOPERATOR SHIFT RESTRELATION

   80 RELATIONOPERATOR: '<'
   81                 | '<' '='
   82                 | '>'
   83                 | '>' '='

   84 SHIFT: ADDITION RESTSHIFT

   85 RESTSHIFT: %empty
   86          | SHIFTOPERATOR ADDITION RESTSHIFT

   87 SHIFTOPERATOR: '<' '<'
   88              | '>' '>'

   89 ADDITION: MULTIPLICATION RESTADDITION

   90 RESTADDITION: %empty
   91             | ADDITIONOPERATOR MULTIPLICATION RESTADDITION

   92 ADDITIONOPERATOR: '+'
   93                 | '-'

   94 MULTIPLICATION: UNARY3 RESTMULTIPLICATION

   95 RESTMULTIPLICATION: %empty
   96                   | MULTIPLICATIONOPERATOR UNARY3 RESTMULTIPLICATION

   97 MULTIPLICATIONOPERATOR: '*'
   98                       | '/'
   99                       | '%'

  100 UNARY3: UNARY2
  101       | '&' UNARY2
  102       | '*' UNARY2
  103       | '-' UNARY2

  104 UNARY2: FACTOR
  105       | '+' FACTOR
  106       | '-' FACTOR
  107       | '!' FACTOR

  108 FACTOR: IDENTIFIER APPLICATION
  109       | IMMEDIATE
  110       | '(' EXPRESSION ')'

  111 APPLICATION: %empty
  112            | '[' EXPRESSION ']' APPLICATION
  113            | '(' EXPRESSION MOREEXPRESSION ')'

  114 MOREEXPRESSION: %empty
  115               | ',' EXPRESSION MOREEXPRESSION

  116 TYPE: KW_BOOL
  117     | KW_CHAR
  118     | KW_FLOAT
  119     | KW_INT

  120 IMMEDIATE: KW_TRUE
  121          | KW_FALSE
  122          | CHAR
  123          | FLOAT
  124          | INT


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 76 107
    '%' (37) 99
    '&' (38) 62 71 101
    '(' (40) 34 36 37 38 110 113
    ')' (41) 34 36 37 38 110 113
    '*' (42) 23 97 102
    '+' (43) 92 105
    ',' (44) 19 49 115
    '-' (45) 8 93 103 106
    '/' (47) 98
    ':' (58) 8
    ';' (59) 1 6 9 17 30 31 32 33 35 39 40 41
    '<' (60) 80 81 87
    '=' (61) 53 56 75 76 81 83
    '>' (62) 8 82 83 88
    '[' (91) 25 51 112
    ']' (93) 25 51 112
    '^' (94) 68
    '{' (123) 26 38
    '|' (124) 59 65
    '}' (125) 26 38
    error (256)
    KW_MODULE (258) 1
    IDENTIFIER (259) 1 8 20 30 35 47 108
    KW_EXTERN (260) 4
    KW_VOID (261) 13
    KW_START (262) 12
    KW_LABEL (263) 30
    KW_BREAK (264) 32
    KW_CONTINUE (265) 33
    KW_IF (266) 34
    KW_GOTO (267) 35
    KW_WHILE (268) 36 37
    DO (269)
    KW_SWITCH (270) 38
    KW_DEFAULT (271) 38
    KW_RETURN (272) 39
    KW_ELSE (273) 43
    KW_CASE (274) 45
    KW_BOOL (275) 116
    KW_CHAR (276) 117
    KW_DO (277) 36 37
    KW_FLOAT (278) 118
    KW_INT (279) 119
    KW_UNTYPED (280)
    KW_TRUE (281) 120
    KW_FALSE (282) 121
    INT (283) 45 51 124
    FLOAT (284) 123
    CHAR (285) 122


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    PROG (53)
        on left: 1
        on right: 0
    GLOBALS (54)
        on left: 2 3 4
        on right: 1 3 4
    GLOBAL (55)
        on left: 5 6
        on right: 3 4
    FUNCTION (56)
        on left: 7
        on right: 5
    FUNCTIONHEADER (57)
        on left: 8
        on right: 7
    FUNCTIONREST (58)
        on left: 9 10
        on right: 7
    MODIFIERS (59)
        on left: 11 12
        on right: 8
    PARAMLIST (60)
        on left: 13 14
        on right: 8
    PARAMBLOCK (61)
        on left: 15
        on right: 14 17
    MOREPARAMBLOCK (62)
        on left: 16 17
        on right: 14 17
    MOREPARAM (63)
        on left: 18 19
        on right: 15 19
    PARAM (64)
        on left: 20
        on right: 15 19
    RETURNTYPE (65)
        on left: 21
        on right: 8
    REFERENCE (66)
        on left: 22 23
        on right: 20 21 23 47
    DIMENSIONBLOCK (67)
        on left: 24 25
        on right: 20 21 25
    BLOCK (68)
        on left: 26
        on right: 10 28 34 36 37 38 43 45
    CODE (69)
        on left: 27 28 29
        on right: 26 28 29
    STATEMENT (70)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 29
    elseBLOCK (71)
        on left: 42 43
        on right: 34
    SWITCHCASES (72)
        on left: 44 45
        on right: 38 45
    DECLARATIONBLOCK (73)
        on left: 46
        on right: 6 41
    DECLARATION (74)
        on left: 47
        on right: 46 49
    RESTDECLARATION (75)
        on left: 48 49
        on right: 46 49
    INDEXBLOCK (76)
        on left: 50 51
        on right: 47 51
    INITIALIZER (77)
        on left: 52 53
        on right: 47
    EXPRESSION (78)
        on left: 54
        on right: 34 36 37 38 39 40 53 110 112 113 115
    RESTEXPRESSION (79)
        on left: 55 56
        on right: 54 56
    LOGICALOR (80)
        on left: 57
        on right: 54 56
    RESTLOGICALOR (81)
        on left: 58 59
        on right: 57 59
    LOGICALAND (82)
        on left: 60
        on right: 57 59
    RESTLOGICALAND (83)
        on left: 61 62
        on right: 60 62
    BITWISEOR (84)
        on left: 63
        on right: 60 62
    RESTBITWISEOR (85)
        on left: 64 65
        on right: 63 65
    BITWISEXOR (86)
        on left: 66
        on right: 63 65
    RESTBITWISEXOR (87)
        on left: 67 68
        on right: 66 68
    BITWISEAND (88)
        on left: 69
        on right: 66 68
    RESTBITWISEAND (89)
        on left: 70 71
        on right: 69 71
    EQUALITY (90)
        on left: 72
        on right: 69 71
    RESTEQUALITY (91)
        on left: 73 74
        on right: 72 74
    EQUALITYOPERATOR (92)
        on left: 75 76
        on right: 74
    RELATION (93)
        on left: 77
        on right: 72 74
    RESTRELATION (94)
        on left: 78 79
        on right: 77 79
    RELATIONOPERATOR (95)
        on left: 80 81 82 83
        on right: 79
    SHIFT (96)
        on left: 84
        on right: 77 79
    RESTSHIFT (97)
        on left: 85 86
        on right: 84 86
    SHIFTOPERATOR (98)
        on left: 87 88
        on right: 86
    ADDITION (99)
        on left: 89
        on right: 84 86
    RESTADDITION (100)
        on left: 90 91
        on right: 89 91
    ADDITIONOPERATOR (101)
        on left: 92 93
        on right: 91
    MULTIPLICATION (102)
        on left: 94
        on right: 89 91
    RESTMULTIPLICATION (103)
        on left: 95 96
        on right: 94 96
    MULTIPLICATIONOPERATOR (104)
        on left: 97 98 99
        on right: 96
    UNARY3 (105)
        on left: 100 101 102 103
        on right: 94 96
    UNARY2 (106)
        on left: 104 105 106 107
        on right: 100 101 102 103
    FACTOR (107)
        on left: 108 109 110
        on right: 104 105 106 107
    APPLICATION (108)
        on left: 111 112 113
        on right: 108 112
    MOREEXPRESSION (109)
        on left: 114 115
        on right: 113 115
    TYPE (110)
        on left: 116 117 118 119
        on right: 15 21 46
    IMMEDIATE (111)
        on left: 120 121 122 123 124
        on right: 109


State 0

    0 $accept: . PROG $end

    KW_MODULE  shift, and go to state 1

    PROG  go to state 2


State 1

    1 PROG: KW_MODULE . IDENTIFIER ';' GLOBALS

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: PROG . $end

    $end  shift, and go to state 4


State 3

    1 PROG: KW_MODULE IDENTIFIER . ';' GLOBALS

    ';'  shift, and go to state 5


State 4

    0 $accept: PROG $end .

    $default  accept


State 5

    1 PROG: KW_MODULE IDENTIFIER ';' . GLOBALS

    KW_EXTERN  shift, and go to state 6
    KW_START   shift, and go to state 7
    KW_BOOL    shift, and go to state 8
    KW_CHAR    shift, and go to state 9
    KW_FLOAT   shift, and go to state 10
    KW_INT     shift, and go to state 11

    IDENTIFIER  reduce using rule 11 (MODIFIERS)
    $default    reduce using rule 2 (GLOBALS)

    GLOBALS           go to state 12
    GLOBAL            go to state 13
    FUNCTION          go to state 14
    FUNCTIONHEADER    go to state 15
    MODIFIERS         go to state 16
    DECLARATIONBLOCK  go to state 17
    TYPE              go to state 18


State 6

    4 GLOBALS: KW_EXTERN . GLOBAL GLOBALS

    KW_START  shift, and go to state 7
    KW_BOOL   shift, and go to state 8
    KW_CHAR   shift, and go to state 9
    KW_FLOAT  shift, and go to state 10
    KW_INT    shift, and go to state 11

    $default  reduce using rule 11 (MODIFIERS)

    GLOBAL            go to state 19
    FUNCTION          go to state 14
    FUNCTIONHEADER    go to state 15
    MODIFIERS         go to state 16
    DECLARATIONBLOCK  go to state 17
    TYPE              go to state 18


State 7

   12 MODIFIERS: KW_START .

    $default  reduce using rule 12 (MODIFIERS)


State 8

  116 TYPE: KW_BOOL .

    $default  reduce using rule 116 (TYPE)


State 9

  117 TYPE: KW_CHAR .

    $default  reduce using rule 117 (TYPE)


State 10

  118 TYPE: KW_FLOAT .

    $default  reduce using rule 118 (TYPE)


State 11

  119 TYPE: KW_INT .

    $default  reduce using rule 119 (TYPE)


State 12

    1 PROG: KW_MODULE IDENTIFIER ';' GLOBALS .

    $default  reduce using rule 1 (PROG)


State 13

    3 GLOBALS: GLOBAL . GLOBALS

    KW_EXTERN  shift, and go to state 6
    KW_START   shift, and go to state 7
    KW_BOOL    shift, and go to state 8
    KW_CHAR    shift, and go to state 9
    KW_FLOAT   shift, and go to state 10
    KW_INT     shift, and go to state 11

    IDENTIFIER  reduce using rule 11 (MODIFIERS)
    $default    reduce using rule 2 (GLOBALS)

    GLOBALS           go to state 20
    GLOBAL            go to state 13
    FUNCTION          go to state 14
    FUNCTIONHEADER    go to state 15
    MODIFIERS         go to state 16
    DECLARATIONBLOCK  go to state 17
    TYPE              go to state 18


State 14

    5 GLOBAL: FUNCTION .

    $default  reduce using rule 5 (GLOBAL)


State 15

    7 FUNCTION: FUNCTIONHEADER . FUNCTIONREST

    ';'  shift, and go to state 21
    '{'  shift, and go to state 22

    FUNCTIONREST  go to state 23
    BLOCK         go to state 24


State 16

    8 FUNCTIONHEADER: MODIFIERS . IDENTIFIER ':' PARAMLIST '-' '>' RETURNTYPE

    IDENTIFIER  shift, and go to state 25


State 17

    6 GLOBAL: DECLARATIONBLOCK . ';'

    ';'  shift, and go to state 26


State 18

   46 DECLARATIONBLOCK: TYPE . DECLARATION RESTDECLARATION

    '*'  shift, and go to state 27

    $default  reduce using rule 22 (REFERENCE)

    REFERENCE    go to state 28
    DECLARATION  go to state 29


State 19

    4 GLOBALS: KW_EXTERN GLOBAL . GLOBALS

    KW_EXTERN  shift, and go to state 6
    KW_START   shift, and go to state 7
    KW_BOOL    shift, and go to state 8
    KW_CHAR    shift, and go to state 9
    KW_FLOAT   shift, and go to state 10
    KW_INT     shift, and go to state 11

    IDENTIFIER  reduce using rule 11 (MODIFIERS)
    $default    reduce using rule 2 (GLOBALS)

    GLOBALS           go to state 30
    GLOBAL            go to state 13
    FUNCTION          go to state 14
    FUNCTIONHEADER    go to state 15
    MODIFIERS         go to state 16
    DECLARATIONBLOCK  go to state 17
    TYPE              go to state 18


State 20

    3 GLOBALS: GLOBAL GLOBALS .

    $default  reduce using rule 3 (GLOBALS)


State 21

    9 FUNCTIONREST: ';' .

    $default  reduce using rule 9 (FUNCTIONREST)


State 22

   26 BLOCK: '{' . CODE '}'

    IDENTIFIER   shift, and go to state 31
    KW_LABEL     shift, and go to state 32
    KW_BREAK     shift, and go to state 33
    KW_CONTINUE  shift, and go to state 34
    KW_IF        shift, and go to state 35
    KW_GOTO      shift, and go to state 36
    KW_WHILE     shift, and go to state 37
    KW_SWITCH    shift, and go to state 38
    KW_RETURN    shift, and go to state 39
    KW_BOOL      shift, and go to state 8
    KW_CHAR      shift, and go to state 9
    KW_DO        shift, and go to state 40
    KW_FLOAT     shift, and go to state 10
    KW_INT       shift, and go to state 11
    KW_TRUE      shift, and go to state 41
    KW_FALSE     shift, and go to state 42
    INT          shift, and go to state 43
    FLOAT        shift, and go to state 44
    CHAR         shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '!'          shift, and go to state 49
    ';'          shift, and go to state 50
    '{'          shift, and go to state 22
    '('          shift, and go to state 51
    '&'          shift, and go to state 52

    $default  reduce using rule 27 (CODE)

    BLOCK             go to state 53
    CODE              go to state 54
    STATEMENT         go to state 55
    DECLARATIONBLOCK  go to state 56
    EXPRESSION        go to state 57
    LOGICALOR         go to state 58
    LOGICALAND        go to state 59
    BITWISEOR         go to state 60
    BITWISEXOR        go to state 61
    BITWISEAND        go to state 62
    EQUALITY          go to state 63
    RELATION          go to state 64
    SHIFT             go to state 65
    ADDITION          go to state 66
    MULTIPLICATION    go to state 67
    UNARY3            go to state 68
    UNARY2            go to state 69
    FACTOR            go to state 70
    TYPE              go to state 18
    IMMEDIATE         go to state 71


State 23

    7 FUNCTION: FUNCTIONHEADER FUNCTIONREST .

    $default  reduce using rule 7 (FUNCTION)


State 24

   10 FUNCTIONREST: BLOCK .

    $default  reduce using rule 10 (FUNCTIONREST)


State 25

    8 FUNCTIONHEADER: MODIFIERS IDENTIFIER . ':' PARAMLIST '-' '>' RETURNTYPE

    ':'  shift, and go to state 72


State 26

    6 GLOBAL: DECLARATIONBLOCK ';' .

    $default  reduce using rule 6 (GLOBAL)


State 27

   23 REFERENCE: '*' . REFERENCE

    '*'  shift, and go to state 27

    $default  reduce using rule 22 (REFERENCE)

    REFERENCE  go to state 73


State 28

   47 DECLARATION: REFERENCE . IDENTIFIER INDEXBLOCK INITIALIZER

    IDENTIFIER  shift, and go to state 74


State 29

   46 DECLARATIONBLOCK: TYPE DECLARATION . RESTDECLARATION

    ','  shift, and go to state 75

    $default  reduce using rule 48 (RESTDECLARATION)

    RESTDECLARATION  go to state 76


State 30

    4 GLOBALS: KW_EXTERN GLOBAL GLOBALS .

    $default  reduce using rule 4 (GLOBALS)


State 31

  108 FACTOR: IDENTIFIER . APPLICATION

    '['  shift, and go to state 77
    '('  shift, and go to state 78

    $default  reduce using rule 111 (APPLICATION)

    APPLICATION  go to state 79


State 32

   30 STATEMENT: KW_LABEL . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 80


State 33

   32 STATEMENT: KW_BREAK . ';'

    ';'  shift, and go to state 81


State 34

   33 STATEMENT: KW_CONTINUE . ';'

    ';'  shift, and go to state 82


State 35

   34 STATEMENT: KW_IF . '(' EXPRESSION ')' BLOCK elseBLOCK

    '('  shift, and go to state 83


State 36

   35 STATEMENT: KW_GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 84


State 37

   36 STATEMENT: KW_WHILE . '(' EXPRESSION ')' KW_DO BLOCK

    '('  shift, and go to state 85


State 38

   38 STATEMENT: KW_SWITCH . '(' EXPRESSION ')' '{' SWITCHCASES KW_DEFAULT BLOCK '}'

    '('  shift, and go to state 86


State 39

   39 STATEMENT: KW_RETURN . EXPRESSION ';'

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 47
    '*'         shift, and go to state 48
    '!'         shift, and go to state 49
    '('         shift, and go to state 51
    '&'         shift, and go to state 52

    EXPRESSION      go to state 87
    LOGICALOR       go to state 58
    LOGICALAND      go to state 59
    BITWISEOR       go to state 60
    BITWISEXOR      go to state 61
    BITWISEAND      go to state 62
    EQUALITY        go to state 63
    RELATION        go to state 64
    SHIFT           go to state 65
    ADDITION        go to state 66
    MULTIPLICATION  go to state 67
    UNARY3          go to state 68
    UNARY2          go to state 69
    FACTOR          go to state 70
    IMMEDIATE       go to state 71


State 40

   37 STATEMENT: KW_DO . BLOCK KW_WHILE '(' EXPRESSION ')'

    '{'  shift, and go to state 22

    BLOCK  go to state 88


State 41

  120 IMMEDIATE: KW_TRUE .

    $default  reduce using rule 120 (IMMEDIATE)


State 42

  121 IMMEDIATE: KW_FALSE .

    $default  reduce using rule 121 (IMMEDIATE)


State 43

  124 IMMEDIATE: INT .

    $default  reduce using rule 124 (IMMEDIATE)


State 44

  123 IMMEDIATE: FLOAT .

    $default  reduce using rule 123 (IMMEDIATE)


State 45

  122 IMMEDIATE: CHAR .

    $default  reduce using rule 122 (IMMEDIATE)


State 46

  105 UNARY2: '+' . FACTOR

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '('         shift, and go to state 51

    FACTOR     go to state 89
    IMMEDIATE  go to state 71


State 47

  103 UNARY3: '-' . UNARY2
  106 UNARY2: '-' . FACTOR

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 90
    '!'         shift, and go to state 49
    '('         shift, and go to state 51

    UNARY2     go to state 91
    FACTOR     go to state 92
    IMMEDIATE  go to state 71


State 48

  102 UNARY3: '*' . UNARY2

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 90
    '!'         shift, and go to state 49
    '('         shift, and go to state 51

    UNARY2     go to state 93
    FACTOR     go to state 70
    IMMEDIATE  go to state 71


State 49

  107 UNARY2: '!' . FACTOR

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '('         shift, and go to state 51

    FACTOR     go to state 94
    IMMEDIATE  go to state 71


State 50

   31 STATEMENT: ';' .

    $default  reduce using rule 31 (STATEMENT)


State 51

  110 FACTOR: '(' . EXPRESSION ')'

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 47
    '*'         shift, and go to state 48
    '!'         shift, and go to state 49
    '('         shift, and go to state 51
    '&'         shift, and go to state 52

    EXPRESSION      go to state 95
    LOGICALOR       go to state 58
    LOGICALAND      go to state 59
    BITWISEOR       go to state 60
    BITWISEXOR      go to state 61
    BITWISEAND      go to state 62
    EQUALITY        go to state 63
    RELATION        go to state 64
    SHIFT           go to state 65
    ADDITION        go to state 66
    MULTIPLICATION  go to state 67
    UNARY3          go to state 68
    UNARY2          go to state 69
    FACTOR          go to state 70
    IMMEDIATE       go to state 71


State 52

  101 UNARY3: '&' . UNARY2

    IDENTIFIER  shift, and go to state 31
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    INT         shift, and go to state 43
    FLOAT       shift, and go to state 44
    CHAR        shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 90
    '!'         shift, and go to state 49
    '('         shift, and go to state 51

    UNARY2     go to state 96
    FACTOR     go to state 70
    IMMEDIATE  go to state 71


State 53

   28 CODE: BLOCK . CODE

    IDENTIFIER   shift, and go to state 31
    KW_LABEL     shift, and go to state 32
    KW_BREAK     shift, and go to state 33
    KW_CONTINUE  shift, and go to state 34
    KW_IF        shift, and go to state 35
    KW_GOTO      shift, and go to state 36
    KW_WHILE     shift, and go to state 37
    KW_SWITCH    shift, and go to state 38
    KW_RETURN    shift, and go to state 39
    KW_BOOL      shift, and go to state 8
    KW_CHAR      shift, and go to state 9
    KW_DO        shift, and go to state 40
    KW_FLOAT     shift, and go to state 10
    KW_INT       shift, and go to state 11
    KW_TRUE      shift, and go to state 41
    KW_FALSE     shift, and go to state 42
    INT          shift, and go to state 43
    FLOAT        shift, and go to state 44
    CHAR         shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '!'          shift, and go to state 49
    ';'          shift, and go to state 50
    '{'          shift, and go to state 22
    '('          shift, and go to state 51
    '&'          shift, and go to state 52

    $default  reduce using rule 27 (CODE)

    BLOCK             go to state 53
    CODE              go to state 97
    STATEMENT         go to state 55
    DECLARATIONBLOCK  go to state 56
    EXPRESSION        go to state 57
    LOGICALOR         go to state 58
    LOGICALAND        go to state 59
    BITWISEOR         go to state 60
    BITWISEXOR        go to state 61
    BITWISEAND        go to state 62
    EQUALITY          go to state 63
    RELATION          go to state 64
    SHIFT             go to state 65
    ADDITION          go to state 66
    MULTIPLICATION    go to state 67
    UNARY3            go to state 68
    UNARY2            go to state 69
    FACTOR            go to state 70
    TYPE              go to state 18
    IMMEDIATE         go to state 71


State 54

   26 BLOCK: '{' CODE . '}'

    '}'  shift, and go to state 98


State 55

   29 CODE: STATEMENT . CODE
